implementations/rust/ockam/ockam/tests/node_attribute/fails_if_more_than_one_arg.stderr
error: a function with '#[ockam::node]' must have exactly one argument
 --> $DIR/fails_if_more_than_one_arg.rs:4:7
  |
4 | async fn foo(c: ockam::Context, _x: u64) {
  |       ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/fails_if_more_than_one_arg.rs:3:1
  |
3 | / #[ockam::node]
4 | | async fn foo(c: ockam::Context, _x: u64) {
5 | |     c.stop().await.unwrap();
6 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node_attribute/fails_if_more_than_one_arg.rs`
